--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,4 +1,30 @@
+/* ###################################### */
+/* ########### MUST READ! ########### */
+/* ###################################### */
+/* The JPG version and the Figma version of this design are different.
+And the cards are different within each of these versions too... */
+
+/* The purple card "Daniel Clifford" from the Mobile version (the free JPG version) has some irregularities in its design compared to the other cards. I thought I was going crazy, so I threw the JPG into Figma to do some manual measurements, and here's
+what I found:
+
+The bold section is misaligned, causing the strange "mid-course" alignment in the JPG.
+The large paragraph has a 48px padding to its right, while the other cards all have 32px.
+
+I ended up downloading the Figma version and lo-and-behold, I was right! And then
+I found that there are more discrepancies within the Figma file itself.
+
+If there's anyone from Front End Mentor reading this, let me know if I can help you out!
+
+I've been learning design and front-end development at the same time, and am very experienced with UI Design on Figma. In my opinion, Figma is best used with divs in mind when designing so as to help the developer get a better idea of where he/she should create divs (Ex: text should be in Frames, not just floating around in Groups).
+*/
+
+/* ###################################### */
+/* That being said, my design is based on the Figma file since it has less discrepancies compared to the free JPG version. */
+/* ###################################### */
+
 @import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,500;0,600;1,500;1,600&display=swap");
+
+@import "media-queries";
 
 /* Global Styles */
 *,
@@ -12,12 +38,14 @@
 
 /* Primary Colors */
 $violet: hsl(263, 55%, 52%);
-$light-violet: hsl(263, 55%, 62.5%);
+$light-violet: hsl(264, 82%, 70);
 $dark-gray-blue: hsl(217, 19%, 35%);
 $dark-gray-blue-50: hsla(217, 19%, 35%, 0.5);
 $dark-gray-blue-70: hsla(217, 19%, 35%, 0.7);
 $black-blue: hsl(219, 29%, 14%);
 $white: hsl(0, 0%, 100%);
+$white-70: hsla(0, 0%, 100%, 0.7);
+$white-50: hsla(0, 0%, 100%, 0.5);
 
 /* Neutral */
 $light-gray: hsl(0, 0%, 81%);
@@ -44,139 +72,69 @@ li {
 }
 
 .grid {
-  padding: 70px 24px;
-  width: 100%;
-  height: 100%;
+  padding: 71px 24px;
+
   .card {
-    padding: 30px;
+    padding: 26px 32px 32px;
     border-radius: 8px;
-    margin-bottom: 24px;
     .flex-row {
-      height: 34px;
       display: flex;
-      margin-bottom: 16px;
       .profile-picture {
-        height: 34px;
-        width: 34px;
-        border-radius: 50%;
-        border: solid 2px $white;
-        overflow: hidden;
-        margin-right: 10px;
         img {
-          height: 30px;
-          width: 30px;
+          height: 32px;
+          width: 32px;
+          border: 2px solid black;
+          border-radius: 15px;
         }
       }
       .flex-col {
-        display: flex;
-        flex-direction: column;
         .user {
+          font-weight: 500;
           font-size: 13px;
-          color: $light-gray;
+          line-height: 13px;
         }
         .verification {
+          font-weight: 500;
           font-size: 11px;
-          color: $light-gray-70;
+          line-height: 11px;
         }
       }
     }
-    .bold-text {
-      max-width: 98%;
-      margin-bottom: 22px;
-      font-size: 20px;
-      font-weight: 600;
-      color: $light-gray;
-      line-height: 24px;
-    }
-    .quote {
-      font-size: 13px;
-      font-weight: 500;
-      color: $light-gray-70;
-      line-height: 135%;
-    }
   }
-  .purple {
+  .card.daniel {
     background-color: $violet;
-    .flex-row {
-      .profile-picture {
-        border: solid 2px $light-violet;
-      }
+    color: $white;
+    position: relative;
+    .quote-graphic {
+      position: absolute;
+      right: 24px;
+      top: 0;
     }
-  }
-  .gray-blue {
-    background-color: $dark-gray-blue;
-    .flex-row {
-      .profile-picture {
-        border: solid 2px $light-gray;
-      }
-    }
-  }
-  .white {
-    background-color: $white;
-    .flex-row {
-      .profile-picture {
-        border-color: $light-gray;
-      }
-      .flex-col {
-        .user {
-          color: $dark-gray-blue;
-        }
-        .verification {
-          color: $dark-gray-blue-50;
-        }
-      }
-    }
-    .bold-text {
-      color: $dark-gray-blue;
-    }
-    .quote {
-      color: $dark-gray-blue-70;
-    }
-  }
-  .black-blue {
-    background-color: $black-blue;
-    .flex-row {
-      .profile-picture {
+    .profile-picture {
+      img {
         border-color: $light-violet;
       }
     }
+    .flex-col {
+      .verification {
+        color: $white-50;
+      }
+    }
+    .bold-text {
+      position: relative;
+      z-index: 1;
+    }
+    .quote {
+      color: $white-70;
+      z-index: 1;
+    }
   }
-}
-
-/* ############################################## */
-/* Default size is 375px min-width */
-/* ############################################## */
-
-@mixin _480 {
-  @media screen and (min-width: 480px) {
-    @content;
+  .card.jonathan {
   }
-}
-
-/*########### Small Tablets ###########*/
-@mixin _640 {
-  @media screen and (min-width: 640px) {
-    @content;
+  .card.jeanette {
   }
-}
-
-/*########### Tablets ###########*/
-@mixin _768 {
-  @media screen and (min-width: 768px) {
-    @content;
+  .card.patrick {
   }
-}
-
-/*########### Laptops ###########*/
-@mixin _1024 {
-  @media screen and (min-width: 1024px) {
-    @content;
-  }
-}
-
-/*########### Small Monitor ###########*/
-@mixin _1440 {
-  @media screen and (min-width: 1440px) {
-    @content;
+  .card.kira {
   }
 }
