--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -58,19 +58,12 @@ html {
   font-size: 13px;
   height: 100vh;
   width: 100vw;
+  padding-top: auto;
+  padding-bottom: auto;
 }
 
 li {
   list-style-type: none;
-}
-
-.attribution {
-  font-size: 11px;
-  text-align: center;
-}
-
-.attribution a {
-  color: hsl(228, 45%, 44%);
 }
 
 body {
