--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -69,6 +69,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  height: 100vh;
+  width: 100vw;
 }
 
 .grid {
@@ -85,6 +87,7 @@ body {
   gap: 24px;
   @include _1440 {
     width: 1158px;
+    height: 720px;
     grid-template-columns: repeat(4, 255px);
     grid-template-rows: 282px 266px;
     gap: 30px;
