--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -104,6 +104,9 @@ body {
       margin-bottom: 18px;
       .profile-picture {
         margin-right: 17px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         img {
           position: relative;
           margin: auto;
@@ -116,9 +119,6 @@ body {
         background-color: $light-violet;
         height: 32px;
         width: 32px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
         border-radius: 30px;
       }
       .flex-col {
@@ -222,6 +222,9 @@ body {
       .bold-text {
         color: $dark-gray-blue;
       }
+      .bold-text {
+        margin-bottom: 24px;
+      }
       .verification {
         color: $dark-gray-blue-50;
       }
@@ -261,6 +264,7 @@ body {
       }
       .bold-text {
         color: $light-gray-blue;
+        margin-bottom: 24px;
       }
       .quote {
         color: $white-70;
